# deedoo

./: Cargo.toml  LICENSE  README.md  README.org
src/: args.rs  file.rs  main.rs
