[package]
name = "deedoo"
version = "0.1.0"
authors = ["Kris <versbinarii@gmail.com>"]
edition = "2018"
publish = true
description = "Simple file deduplicator."
repository = "https://github.com/VersBinarii/deedoo"
keywords = ["file-deduplicator", "cli-tool"]
license = "MIT"
readme = "README.org"

[dependencies]
crc = "^1.8"
walkdir = "2.2"
clap="2.32.0"