[package]
name = "deedoo"
version = "0.1.2"
authors = ["Kris <versbinarii@gmail.com>"]
edition = "2018"
publish = true
description = "Simple file deduplicator."
repository = "https://github.com/VersBinarii/deedoo"
keywords = ["file-deduplicator", "cli-tool"]
license = "MIT"
readme = "README.md"

[dependencies]
crc = "^1.8"
walkdir = "2.2"
clap="2.32.0"